# pydantic-ai

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  mkdocs.yml  multimodal.md  pyproject.toml  uprev.py
.github/workflows/: ci.yml
demo/: README.md  pyproject.toml
demo/demo/step_1_initial_setup/: app_v1_skeleton.py  app_v2_instrumented.py  app_v3_with_imports.py
demo/demo/step_2_basic_agent/: app_v3_agent_first_pass.py  app_v4_agent_first_pass.py
demo/demo/step_3_user_problem/: generate_mock_user_requests.py  mock_user_requests_worker.py
demo/demo/step_4_evaluate/: app_v4_agent_updated.py  app_v5_agent_updated.py  eval.py  retrieve_test_cases.py  retrieved_test_cases.yaml  retrieved_test_cases_schema.json
demo/demo/step_5_monitor/: Agent Metrics Dashboard.json  Agents Metrics Dashboard.json  app_v6_agent_final.py  user_requests_worker.py
demo/demo/util/: time_range_v1.py  tokens.py
docs/: agents.md  cli.md  contributing.md  direct.md  evals.md  graph.md  index.md  install.md  message-history.md  models.md  multi-agent-applications.md  output.md  retries.md  testing.md  thinking.md  tools.md  toolsets.md
docs/.partials/: index-header.html
docs/api/: agent.md  providers.md  tenacity.md
docs/examples/: third-party.md  weather-agent.md
docs/mcp/: client.md  run-python.md
docs/models/: gemini.md  index.md  openai.md
examples/: pyproject.toml
examples/pydantic_ai_examples/: bank_support.py  chat_app.py  flight_booking.py  question_graph.py  structure_query_generation.py  temporal.py  temporal_graph.py
mcp-run-python/: README.md  deno.json  deno.jsonc  package-lock.json  package.json  test_mcp_servers.py  uprev.py
mcp-run-python/src/: index.ts  main.ts  prepare_env.py  runCode.ts
pydantic_ai_slim/: plan.md  pyproject.toml
pydantic_ai_slim/pydantic_ai/: __init__.py  _agent_graph.py  _chat_completions.py  _cli.py  _otel_messages.py  _output.py  _parts_manager.py  _result.py  _tool_manager.py  _utils.py  ag_ui.py  agent.py  builtin_tools.py  direct.py  exceptions.py  mcp.py  mcp_run_python.py  messages.py  result.py  retries.py  run.py  settings.py  tenacity.py  usage.py
pydantic_evals/: pyproject.toml
pydantic_evals/pydantic_evals/: __init__.py  _utils.py  assertions.py  cases.py  dataset.py  datasets.py  demo.py  evals.py  evals_v2.py  examples.py  generation.py  llm_as_a_judge.py  render_numbers.py  reports.py  scoring.py
pydantic_evals/pydantic_evals/assessments/: __init__.py  common.py  context.py  functions.py  llm_as_a_judge.py  scoring.py  spec.py
pydantic_evals/pydantic_evals/demo/time_range/: __init__.py  agent.py  eval.py  models.py  test_cases.yaml  test_cases_schema.json
pydantic_evals/pydantic_evals/evaluators/: __init__.py  _run_evaluator.py  _spec.py  common.py  context.py  evaluator.py  function_evaluator.py  spec.py
pydantic_evals/pydantic_evals/otel/: __init__.py  _errors.py  context_in_memory_span_exporter.py  span_tree.py
pydantic_evals/pydantic_evals/reporting/: __init__.py  render_numbers.py  reports.py
pydantic_graph/: README.md  pyproject.toml
pydantic_graph/pydantic_graph/: __init__.py  graph.py  mermaid.py  nodes.py  state.py
tests/: conftest.py  import_examples.py  json_body_serializer.py  test_a2a.py  test_agent.py  test_cli.py  test_direct.py  test_examples.py  test_history_processor.py  test_live.py  test_logfire.py  test_mcp.py  test_parts_manager.py  test_settings.py  test_streaming.py  test_temporal.py  test_tenacity.py  test_tools.py  test_toolsets.py  test_usage_limits.py  test_utils.py  typed_agent.py  typed_graph.py
tests/evals/: __init__.py  test_dataset.py  test_evaluator_base.py  test_evaluator_common.py  test_evaluator_context.py  test_evaluator_spec.py  test_evaluators.py  test_llm_as_a_judge.py  test_otel.py  test_render_numbers.py  test_reporting.py  test_reports.py  test_utils.py  utils.py
tests/ext/: test_langchain.py
tests/graph/: test_graph.py  test_history.py  test_mermaid.py  test_state.py
tests/models/: test_anthropic.py  test_bedrock.py  test_cohere.py  test_deepseek.py  (+18 more)
(+142 files in other folders)
